Refactor and enhance DataOps platform: fix ingestion flow, improve security configs, add comprehensive tests