@@ -1,6 +1,5 @@
 package com.dataops.platform.monolith.config;
 
-import com.github.benmanes.caffeine.cache.Caffeine;
 import org.springframework.cache.Cache;
 import org.springframework.cache.CacheManager;
 import org.springframework.cache.annotation.EnableCaching;
@@ -9,9 +8,29 @@ import org.springframework.cache.support.SimpleCacheManager;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
-import java.util.Arrays;
+import com.github.benmanes.caffeine.cache.Caffeine;
+
+import java.util.List;
 import java.util.concurrent.TimeUnit;
 
+/**
+ * Spring Cache wiring.
+ *
+ * <p>Only caches that have an actual {@code @Cacheable} consumer in the codebase
+ * are configured here. Earlier iterations declared five caches
+ * ({@code records-by-id}, {@code records-by-source}, {@code analytics-stats},
+ * {@code analytics-sorted}, {@code export-cache}) but none were consumed;
+ * caches without consumers are dead code that misleads future readers about
+ * what the system actually does. See the audit accompanying Stage 1 for the
+ * per-cache decision matrix.
+ *
+ * <p>Current consumers:
+ * <ul>
+ *   <li>{@code records-by-source} — {@code PersistenceService.findBySource(source)}</li>
+ *   <li>{@code analytics-stats} — {@code AnalyticsService.getStats(records, source)}</li>
+ *   <li>{@code analytics-sorted} — {@code AnalyticsService.getSortedData(records, source, sortType)}</li>
+ * </ul>
+ */
 @Configuration
 @EnableCaching
 public class CacheConfig {
@@ -19,12 +38,6 @@ public class CacheConfig {
     @Bean
     public CacheManager cacheManager() {
         SimpleCacheManager cacheManager = new SimpleCacheManager();
-
-        Cache recordsById = new CaffeineCache("records-by-id", Caffeine.newBuilder()
-                .expireAfterWrite(15, TimeUnit.MINUTES)
-                .maximumSize(50_000)
-                .recordStats()
-                .build());
 
         Cache recordsBySource = new CaffeineCache("records-by-source", Caffeine.newBuilder()
                 .expireAfterWrite(10, TimeUnit.MINUTES)
@@ -41,18 +54,7 @@ public class CacheConfig {
                 .maximumSize(50)
                 .build());
 
-        Cache exportCache = new CaffeineCache("export-cache", Caffeine.newBuilder()
-                .expireAfterWrite(30, TimeUnit.MINUTES)
-                .maximumSize(10)
-                .build());
-
-        cacheManager.setCaches(Arrays.asList(
-                recordsById,
-                recordsBySource,
-                analyticsStats,
-                analyticsSorted,
-                exportCache
-        ));
+        cacheManager.setCaches(List.of(recordsBySource, analyticsStats, analyticsSorted));
 
         return cacheManager;
     }
